<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="enterName">Enter your name</string>
    <string name="search">Search</string>
    <string name="language">Language</string>
    <string name="noRdv">You don\'t have any planned rendez-vous for today. Please ask the secretary for further informations.</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="welcome">Welcome</string>
    <string name="validate">Validate</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="firstName">First name</string>
    <string name="BirthDate">Date of birth</string>
    <string name="myRDV">My rendezvous :</string>
    <string name="typeRDV">"The type of appointment is : "</string>
    <string name="dateRDV">Date of rendezvous</string>
    <string name="hourRDV">Hour of rendrevous</string>
    <string name="back">Back</string>
    <string name="consentForm">Consent form or review</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signature">Signature</string>
    <string name="Thanks">Thank you for your registration.</string>
    <string name="chooseLanguage">Choose language</string>
    <string name="answers">Answers</string>
    <string name="app_name" translatable="false">Mediconsent</string>
    <string name="longText">This is just a long text to test the application, you shoul not see this on production. This is a dev tool.</string>
    <string name="enterFirstName">Enter your firstname</string>
    <string name="rendezvous">"Hello, you have a planned appointment today : a "</string>
    <string name="answerunder">Answer under</string>
    <string name="next">next</string>
    <string name="reset">reset</string>
</resources>