<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/connect_edittext_username"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/connect_edittext_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/connect_button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />
</LinearLayout>