<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/search_layout_firstname"
        android:text="@string/enterFirstName"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/search_layout_firstname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/search_layout_name"
        android:text="@string/enterName"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/search_layout_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />
</LinearLayout>