<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/answers"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/responselist_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:labelFor="@id/responselist_comment"
        android:text="@string/comment"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/responselist_comment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="25dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate" />


</LinearLayout>