<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_gradiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/connect_username"
        android:text="@string/username"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/connect_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/connect_password"
        android:text="@string/password"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/connect_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lines="1" />

    <Button
        android:id="@+id/connect_button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="5dp"
        android:text="@string/connect"
        android:textSize="25sp" />
</LinearLayout>